--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+	<properties>
+		<!-- SonarCloud.io -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
+		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
+
 	<name>SemanticCMS Section BOM²</name>
 	<url>https://semanticcms.com/section/bom/</url>
 	<description>Bill of Materials (BOM) for SemanticCMS Section features.</description>
