--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<url>https://github.com/aoindustries/semanticcms-section-bom/issues</url>
 	</issueManagement>
 
+	<ciManagement>
+		<system>GitHub Actions</system>
+		<url>https://github.com/aoindustries/semanticcms-section-bom/actions</url>
+	</ciManagement>
+
 	<repositories>
 		<!-- Repository required here, too, so can find parent -->
 		<repository>
