--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom-book</artifactId><version>1.7.0</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom-book</artifactId><version>1.7.0-POST-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -74,7 +74,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-section-bom.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-section-bom.git</developerConnection>
 		<url>https://github.com/aoindustries/semanticcms-section-bom</url>
-		<tag>semanticcms-section-bom-book-1.7.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
