--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 	<properties>
 		<!-- SonarQube -->
 		<sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
-		<sonar.organization>aoindustries</sonar.organization>
+		<sonar.organization>ao-apps</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
@@ -68,20 +68,20 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/semanticcms-section-bom.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-section-bom.git</developerConnection>
-		<url>https://github.com/aoindustries/semanticcms-section-bom</url>
+		<connection>scm:git:git://github.com/ao-apps/semanticcms-section-bom.git</connection>
+		<developerConnection>scm:git:git@github.com:ao-apps/semanticcms-section-bom.git</developerConnection>
+		<url>https://github.com/ao-apps/semanticcms-section-bom</url>
 		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
 		<system>GitHub Issues</system>
-		<url>https://github.com/aoindustries/semanticcms-section-bom/issues</url>
+		<url>https://github.com/ao-apps/semanticcms-section-bom/issues</url>
 	</issueManagement>
 
 	<ciManagement>
 		<system>GitHub Actions</system>
-		<url>https://github.com/aoindustries/semanticcms-section-bom/actions</url>
+		<url>https://github.com/ao-apps/semanticcms-section-bom/actions</url>
 	</ciManagement>
 
 	<repositories>
