--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,9 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			<dependency>
 				<groupId>com.aoapps</groupId><artifactId>ao-lang</artifactId><version>5.1.2${POST-SNAPSHOT}</version>
 			</dependency>
+			<dependency>
+				<groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.10.13</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
