--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,9 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
