--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,10 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
 			<dependency>
 				<groupId>joda-time</groupId><artifactId>joda-time</artifactId><version>2.10.13</version>
 			</dependency>
+			<!-- Reported by versions:display-dependency-updates -->
+			<dependency>
+				<groupId>com.aoapps</groupId><artifactId>ao-encoding</artifactId><version>6.0.1${POST-SNAPSHOT}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
